# adventofcode

./: .gitignore  1-1.php  1-2.php  12-2.php  14.php  15.php  16.php  18.php  2-1.php  2-2.php  20.php  21-2.php  22.php  23-1.php  23-2.php  23.php  24-2.php  3-1.php  3-2.php  3.ipynb  4-1.php  4-2.php  4.ipynb  5-1.php  5-2.php  5-2.py  6-1.php  6-2.php  6.py  7-1.php  7-2.php  7.ipynb  7.py  8.php  9-1.php  9-2.php  9.py  README.md  knothash.py
2016/: 10-1.php  10-2.php  11.php  12-1.php  13-1.php  13-2.php  14.php  15.php  16.php  17.php  19-1.php  19-2.c  2-1.php  2-2.php  21-1.php  21-2.php  24-1.php  25.php  3-2.php  4-1.php  5-1.php  6-1.php  6-2.php  7-1.php  7-2.php  8.php  9-2.php
2017/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18-2.py  18.py  19.py  2.py  20.py  3.py  4.py  5-1.py  6.py  8.py  9.py  warmup.py
2018/: 1.py  10.ipynb  11.ipynb  12.ipynb  2.py  3.ipynb  4.ipynb  5.ipynb  6.ipynb  8.ipynb  9.c
2019/: 2.ipynb  4.ipynb  6.ipynb  7.ipynb  9.ipynb  Cargo.toml
2019/OLD/: 15.ipynb  3.ipynb  5.ipynb  8.ipynb  intcomputer.ipynb
2019/src/: intcode.rs  lib.rs  stuff.rs
2020/: 1.py  10.py  11.py  14.py  16.py  17.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2021/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21-1.py  21.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2022/: Cargo.toml
2023/: Cargo.toml
