[package]
name = "aoc-2019"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
nom = "7.1.3"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
ordered-float = "3.4.0"
pathfinding = "4.2.0"
regex = "1.7.1"
strum = { version = "0.24.1", features = ["derive"] }
