[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"
crossbeam-channel = "0.5.8"
itertools = "0.12.0"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
